criação de rotas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=aula
-spring.datasource.url=jbdc:postgresql://dpg-d36julffte5s73bi2h1g-a.oregon-postgres.render.com/sistemabancario_3ff1
+spring.datasource.url=jdbc:postgresql://dpg-d36julffte5s73bi2h1g-a.oregon-postgres.render.com/sistemabancario_3ff1
 spring.datasource.username=sistemabancario_3ff1_user
 spring.datasource.password=d9It0F3FVVDX446RzDHpGJYeHXHId3MO
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+springdoc.swagger-ui.path=/aula/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
